--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                 <div class="border mb-5 text-start p-4 update">
                     <p class="fw-bold mb-2">網站更新日誌</p>
                     <ul class="mb-0">
-                        <li>2022.09.18  更新XIVSlothCombo各職業翻譯按鈕</li>
-                        <li>2022.09.12  新增第三方插件頁面</li>
+                        <li>2022.09.19  [3rd]新增Yes Already</li>
+                        <li>2022.09.18  [3rd]更新XIVSlothCombo各職業翻譯按鈕</li>
+                        <li>2022.09.12  [3rd]新增第三方插件頁面</li>
                         <li>2022.09.01  更新Simple Tweaks翻譯至6.2版本</li>
                     </ul>
                 </div>
