--- a/third_plugins.html
+++ b/third_plugins.html
@@ -73,6 +73,7 @@
                         <a class="nav-link ms-3 my-1" href="#Material">Material UI</a>
                     </nav>
                     <a class="nav-link" href="#autohook">自動釣魚</a>
+                    <a class="nav-link" href="#yesAlready">以上皆是</a>
                 </nav>
             </nav>
 
@@ -84,7 +85,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Cammy</h6>
                         <a href="https://github.com/UnknownX7/Cammy" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/UnknownX7/DalamudPluginRepo/master/pluginmaster.json
@@ -102,13 +103,14 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">XIVSlothCombo</h6>
                         <a href="https://github.com/Nik-Potokar/XIVSlothCombo" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/Nik-Potokar/MyDalamudPlugins/main/pluginmaster.json
                     </div>
                     <p>更多功能的combo，<a
-                            href="https://docs.google.com/spreadsheets/d/1hCwuz1hUmH5cnN1o0zLA3nxRR6w9f6ltpWv3JNkE8VI/edit?usp=sharing">詳細翻譯請參照這裡</a>
+                            href="https://docs.google.com/spreadsheets/d/1hCwuz1hUmH5cnN1o0zLA3nxRR6w9f6ltpWv3JNkE8VI/edit?usp=sharing" target="_blank">
+                            詳細翻譯請參照這裡</a>
                         </br>
                         有空再合併到網頁來
                     </p>
@@ -510,7 +512,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">XIVAuras</h6>
                         <a href="https://github.com/lichie567/XIVAuras" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"   role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/lichie567/XIVAuras/main/repo.json
@@ -528,7 +530,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Penumbra</h6>
                         <a href="https://github.com/xivdev/Penumbra" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/xivdev/Penumbra/master/repo.json
@@ -553,7 +555,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Glamourer</h6>
                         <a href="https://github.com/Ottermandias/Glamourer" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/Ottermandias/Glamourer/main/repo.json
@@ -573,7 +575,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">Material UI</h6>
                         <a href="https://github.com/Sevii77/ffxiv_materialui_accent" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/Sevii77/ffxiv_materialui_accent/master/repo.json
@@ -610,7 +612,7 @@
                     <div class="plugintitle d-flex align-items-center mb-3">
                         <h6 class="fs-4 d-inline mb-0 me-3">AutoHook</h6>
                         <a href="https://github.com/InitialDet/AutoHook" class="btn btn-outline-secondary"
-                            role="button">插件原網址</a>
+                        target="_blank"  role="button">插件原網址</a>
                     </div>
                     <div class="alert alert-secondary" role="alert">
                         https://raw.githubusercontent.com/InitialDet/MyDalamudPlugins/main/pluginmaster.json
@@ -626,16 +628,30 @@
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
-                        <img data-src="image/Autohook01.jpg" alt="" class="img-fluid w-50 mb-2 imgnoJq lazyload">
+                        <img data-src="image/Autohook01.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
-                        <img data-src="image/Autohook02.jpg" alt="" class="img-fluid w-50 mb-2 imgnoJq lazyload">
+                        <img data-src="image/Autohook02.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                         <div class="spinner-border m-3" role="status" visibility="visible">
                             <span class="visually-hidden">Loading...</span>
                         </div>
                         <img data-src="image/Autohook03.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
                     </div>
+                </div>
+                <!-- yesAlready -->
+                <div class="commonFormat mt-5" id="yesAlready">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">yes Already</h6>
+                        <a href="https://github.com/daemitus/YesAlready" class="btn btn-outline-secondary"
+                        target="_blank"  role="button">插件原網址</a>
+                    </div>
+                    <div class="alert alert-secondary" role="alert">
+                        https://github.com/daemitus/MyDalamudPlugins/raw/master/pluginmaster.json
+                    </div>
+                    <p>將很多問你確定要XXXX的視窗全部選"yes"！不要再問ㄌ<br>
+                        這邊有人寫了超詳細教學→ <a href="https://www.bilibili.com/read/cv16673924/" target="_blank">[FF14]关于FF14卫月Dalamud中Yes Already的用法以及正则表达式的浅识</a>
+                    </p>
                 </div>
             </div>
         </div>
