--- a/head.html
+++ b/head.html
@@ -33,6 +33,7 @@
                         <li><a class="dropdown-item" href="third_plugins.html#Glamourer">Glamourer</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#Material">Material UI</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#autohook">自動釣魚</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#yesAlready">以上皆是</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
