新增竹子透視器

--- a/head.html
+++ b/head.html
@@ -34,6 +34,7 @@
                         <li><a class="dropdown-item" href="third_plugins.html#Material">Material UI</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#autohook">自動釣魚</a></li>
                         <li><a class="dropdown-item" href="third_plugins.html#yesAlready">以上皆是</a></li>
+                        <li><a class="dropdown-item" href="third_plugins.html#ChopBamboo">躲金蝶一閃</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
