--- a/third_plugins.html
+++ b/third_plugins.html
@@ -74,6 +74,7 @@
                     </nav>
                     <a class="nav-link" href="#autohook">自動釣魚</a>
                     <a class="nav-link" href="#yesAlready">以上皆是</a>
+                    <a class="nav-link" href="#ChopBamboo">躲金蝶一閃</a>
                 </nav>
             </nav>
 
@@ -652,6 +653,24 @@
                     <p>將很多問你確定要XXXX的視窗全部選"yes"！不要再問ㄌ<br>
                         這邊有人寫了超詳細教學→ <a href="https://www.bilibili.com/read/cv16673924/" target="_blank">[FF14]关于FF14卫月Dalamud中Yes Already的用法以及正则表达式的浅识</a>
                     </p>
+                </div>
+                <!-- ChopBamboo -->
+                <div class="commonFormat mt-5" id="ChopBamboo">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">The Slice is Right</h6>
+                        <a href="https://github.com/carvelli/Slice-Is-Right" class="btn btn-outline-secondary"
+                        target="_blank"  role="button">插件原網址</a>
+                    </div>
+                    <div class="alert alert-secondary" role="alert">
+                        https://raw.githubusercontent.com/carvelli/Dalamud-Plugins/master/dist/pluginmaster.json
+                    </div>
+                    <p>顯示竹子倒下的範圍</p>
+                    <div class="mix d-flex flex-wrap">
+                        <div class="spinner-border m-3" role="status" visibility="visible">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                        <img data-src="image/TheSliceisRight.jpg" alt="" class="img-fluid mb-2 imgnoJq lazyload">
+                    </div>
                 </div>
             </div>
         </div>
