刪除不必要的圖片&修改combo嵌入方式

--- a/head.html
+++ b/head.html
@@ -23,19 +23,8 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="plugins_ui.html">插件介紹</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">第三方插件</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="third_plugins.html#cammy">視距解鎖</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#SlothCombo">超猛連擊</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#XIVAuras">buff CD增強</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#Penumbra">Penumbra</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#Glamourer">Glamourer</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#Material">Material UI</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#autohook">自動釣魚</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#yesAlready">以上皆是</a></li>
-                        <li><a class="dropdown-item" href="third_plugins.html#ChopBamboo">躲金蝶一閃</a></li>
-                    </ul>
+                <li class="nav-item">
+                    <a class="nav-link active" data-bs-toggle="page" href="third_plugins.html">第三方插件</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="question.html">常見問題</a>
