刻首頁的banner、選單

--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<html lang="zh-TW">
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-4GK80CEHHB');
+  </script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
+  <meta name="author" content="BigYo">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+  <meta property="og:title" content="亞馬烏羅提後花園">
+  <meta property="og:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
+  <meta property="og:site_name" content="亞馬烏羅提後花園">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+  <meta property="twitter:title" content="亞馬烏羅提後花園">
+  <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
+  <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
+
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
+
+  <!-- 字體 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500&family=Noto+Sans+TC:wght@100;300;500;700&family=Nunito:wght@200;500;900&display=swap" rel="stylesheet">
+
+
+  <title>Dalamud / FF14插件－亞馬烏羅提後花園</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
