--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- 字體 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500&family=Noto+Sans+TC:wght@100;300;500;700&family=Nunito:wght@200;500;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;500;800&family=Noto+Sans+TC:wght@100;300;500;700&family=Rubik:wght@300;500;800&display=swap" rel="stylesheet">
 
 
   <title>Dalamud / FF14插件－亞馬烏羅提後花園</title>
@@ -43,6 +43,7 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <script src="https://kit.fontawesome.com/20b025f5ea.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
