--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
                 </svg>
                 <div class="py-2">
                     <!-- 最新狀態 -->
-                    <!-- <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold"
+                    <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold"
                         role="alert">
                         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
                             <use xlink:href="#info-fill" />
                         </svg>
-                        <div class="div">
-                            6.11絕讚更新中目前還無法使用插件！
-                            <a class="" href="https://discord.gg/3NMcUV5">更新通知可以加入Dalamud DC</a>
+                        <div class="div text-start">
+                            後花園2.0歡迎熱心人士一同建置
+                            <a class="" href="https://amaurot-garden.web.app/">https://amaurot-garden.web.app/</a>
+                            <br>
+                            更多功能緩慢更新中 ex:留言板、個人頁面可以宣傳更多東西之類ㄉ
                         </div>
-                    </div> -->
+                    </div>
                     <!-- banner -->
                     <h1 class="display-4 fw-bold">Dalamud</h1>
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
@@ -247,7 +249,7 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <div class="mx-auto text-center">
-                                        <a href="image/xl install 01.jpg" target="_blank"><img
+                                        <a href="image/xlinstall01.jpg" target="_blank"><img
                                                 src="image/xl install 01.jpg" class="img-fluid border rounded-3 mb-3"
                                                 alt="" loading="lazy" width="600"></a>
                                         <p class="mb-5 mx-sm-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
