--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   </script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
+  <meta name="description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。註冊登入可編輯資料">
   <meta name="author" content="BigYo">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
-  <meta property="og:title" content="亞馬烏羅提後花園">
-  <meta property="og:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
-  <meta property="og:site_name" content="亞馬烏羅提後花園">
+  <meta property="og:title" content="亞馬烏羅提後花園2.0">
+  <meta property="og:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。註冊登入可編輯資料">
+  <meta property="og:site_name" content="亞馬烏羅提後花園2.0">
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
-  <meta property="twitter:title" content="亞馬烏羅提後花園">
-  <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
+  <meta property="twitter:title" content="亞馬烏羅提後花園2.0">
+  <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。註冊登入可編輯資料">
   <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
 
   <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
