--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;500;800&family=Noto+Sans+TC:wght@100;300;500;700&family=Rubik:wght@300;500;800&display=swap" rel="stylesheet">
 
 
-  <title>Dalamud / FF14插件－亞馬烏羅提後花園</title>
+  <title>Dalamud / FF14插件－亞馬烏羅提後花園2.0</title>
 </head>
 
 <body>
