--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                             <use xlink:href="#info-fill" />
                         </svg>
                         <div class="div text-start">
-                            後花園2.0歡迎熱心人士一同建置
+                            後花園2.0已上線，1.0不再更新維護
                             <a class="" href="https://amaurot-garden.web.app/">https://amaurot-garden.web.app/</a>
                             <br>
-                            更多功能緩慢更新中 ex:留言板、個人頁面可以宣傳更多東西之類ㄉ
+                            更多功能緩慢更新中 ex:留言板、個人頁面可以宣傳更多東西、第三方插件區域
                         </div>
                     </div>
                     <!-- banner -->
